# bayesian-llm

./: .gitignore  AGENTS.md  NOTES.md  README.md  pyproject.toml  report.md
agents/: design-rationale.md  milestone-history.md  pipeline-guide.md  technical-reference.md
configs/: a0_agnews.yaml  a0_baseline.yaml  a1_agnews.yaml  a2_agnews.yaml  a3_agnews.yaml  b1_laplace_agnews.yaml  b2_blob_agnews.yaml  b2_pretrain_agnews.yaml  b2_pretrain_shakespeare.yaml  b3_lora_agnews.yaml  b3_smoke_test.yaml  c0.yaml  c0_pile.yaml  c1.yaml  c2.yaml  c3_phase2.yaml  c4_lap.yaml  c4_tfb.yaml
docs/: arxiv-requirements.md  bayesian-lora-papers.md  metrics-guide.md  paper.md
experiments/: a0_baseline.py  a1_bayes_output.py  a2_bayes_ffn.py  a3_bayes_ffn_attn_v.py  agent_briefing.md  b1_laplace_baseline.py  b2_blob_lora.py  b3_post_hoc_lora.py  c_milestones.py  c_pipeline.py  eval_utils.py  experiment_setup.py  mlflow_utils.py  pipeline_runner.py  runner.py
minigpt/: __init__.py  config.py  data.py  evaluate.py  laplace.py  layers.py  lora.py  model.py  tfb.py  train.py  uncertainty.py
paper/: paper.md  paper.tex  references.bib  references_ground_truth.json
scripts/: benchmark_inference.py  compare_runs.py  dump_mlflow_run.py  eval_c_checkpoints.py  eval_checkpoint.py  eval_mc_dropout.py  generate_figures.py  profile_c_gpu.py  profile_gpu.py  verify_mean_weights.py  verify_references.py
specs/: B-milestone-roadmap.md  a0-baseline-checklist.md  a1-bayesian-output-head.md  a1-kl-tuning.md  a1-tuning-round2.md  a2-bayesian-ffn.md  a3-bayesian-ffn-attention-v.md  main-spec.md  (+31 more)
(+36 files in other folders)
