[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-llm"
version = "0.1.0"
description = "Minimal experiments for Bayesian methods in LLMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "torch",
    "tiktoken",
    "mlflow",
    "pyyaml",
]

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["minigpt*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
